Finish webpack setup.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ToDew</title>
-  <script defer src="index.bundle.js"></script><script defer src="print.bundle.js"></script></head>
+  </head>
   <body>
     <div id="content"></div>
   </body>
